--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,11 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="sortcut icon" href="http://www.myiconfinder.com/uploads/iconsets/256-256-d0645975103dda9ca64b5485c2aea124.png" type="image/gif" />
+
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <title>Convert Polaroid</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
